2013-04-22  Anders Carlsson  <andersca@apple.com>

        Don't kill our XPC services in response to memory pressure
        https://bugs.webkit.org/show_bug.cgi?id=114985
        <rdar://problem/13229217>

        Reviewed by Mark Rowe.

        * Shared/EntryPointUtilities/mac/XPCService/XPCServiceEntryPoint.h:
        (WebKit::XPCServiceInitializer):
        Call xpc_transaction_begin() so we'll never be killed by the kernel when there's memory pressure;
        we prefer to manage our own lifetime thank you very much!

        * Shared/mac/ChildProcessMac.mm:
        (WebKit::ChildProcess::platformInitialize):
        Remove call to disable sudden termination.

2013-04-22  Alexey Proskuryakov  <ap@apple.com>

        <rdar://problem/13681842> [Mac] Tweak WebProcess sandbox profile to use
        system-graphics function when available.

        Reviewed by Sam Weinig.

        * WebProcess/com.apple.WebProcess.sb.in:

2013-04-22  Zan Dobersek  <zdobersek@igalia.com>

        [GTK] Set up libPlatform.la
        https://bugs.webkit.org/show_bug.cgi?id=114168

        Reviewed by Martin Robinson.

        * GNUmakefile.am: Add the new libPlatform.la library to the libwebkitgtk library. Link the WebKitPluginProcess
        executable against libPlatform.la as well.

2013-04-22  Sam Weinig  <sam@webkit.org>

        Hard code plug-in sandbox profile lookup directories and move
        the profiles to WebKit2.

        Reviewed by Anders Carlsson.

        * PluginProcess/EntryPoint/mac/LegacyProcess/PluginProcessMain.mm:
        (WebKit::PluginProcessMainDelegate::getExtraInitializationData):
        * PluginProcess/EntryPoint/mac/XPCService/PluginServiceEntryPoint.mm:
        (WebKit::PluginServiceInitializerDelegate::getExtraInitializationData):
        * UIProcess/Plugins/mac/PluginProcessProxyMac.mm:
        (WebKit::PluginProcessProxy::platformGetLaunchOptions):
        Stop passing the sandbox-profile-directory-path to the plug-in process.
